8150307: Some tests fail when run on JDK 9 due to use of -Djava.ext.dirs
Reviewed-by: ddhill